--- a/res/layout/song_list.xml
+++ b/res/layout/song_list.xml
@@ -20,12 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
+            android:singleLine="true"
+            android:ellipsize="end"
              />
 
         <TextView
             android:id="@+id/path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
              />
         
     </LinearLayout>
