--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gaojun.MediaPlayer.MainActivity" >
+    tools:context="com.gaojun.MediaPlayer.activity.MainActivity" >
 
     <ListView 
         android:id="@+id/lv"
